security: full remediation V-01 to V-16 - cookie-only auth, DTOs, RBAC, rate limiting